[package]
name = "rust_test"
version = "0.1.0"
edition = "2021"


[dependencies]
# env
dotenvy = "0.15"

# error
anyhow = "1"

# log
tracing-subscriber = { version = "0.3", features = ["time"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-actix-web = "0.7"

# time
time = "0.3"
chrono = { version = "0.4" }

# serde
serde = { version = "1.0" }
serde_repr = { version = "0.1" }
serde_json = { version = "1.0" }

[dev-dependencies]
cargo-make = "0.37"
